@@ -70,8 +70,7 @@ public class RegenerateCodeAction extends GradleAction {
 				List<GeneratorTemplate> templates = mcreator.getGenerator().getModElementGeneratorTemplatesList(mod);
 				if (templates == null)
 					continue;
-				List<File> modElementFiles = templates.stream().map(GeneratorTemplate::getFile)
-						.collect(Collectors.toList());
+				List<File> modElementFiles = templates.stream().map(GeneratorTemplate::getFile).toList();
 				toBePreserved.addAll(modElementFiles); // we don't delete mod element files in next step
 				if (!mod.isCodeLocked()) // but we do in this step, if the code is not locked
 					modElementFiles.forEach(File::delete);
